; ModuleID = '/home/carl/AnghaBench/freebsd/sys/cam/extr_cam_queue.c_cam_ccbq_resize.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/cam/extr_cam_queue.c_cam_ccbq_resize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cam_ccbq = type { i32, i32, i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@CAM_REQ_CMP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cam_ccbq_resize(%struct.cam_ccbq* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.cam_ccbq*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.cam_ccbq* %0, %struct.cam_ccbq** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %5, align 4
  %8 = load %struct.cam_ccbq*, %struct.cam_ccbq** %4, align 8
  %9 = getelementptr inbounds %struct.cam_ccbq, %struct.cam_ccbq* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.cam_ccbq*, %struct.cam_ccbq** %4, align 8
  %12 = getelementptr inbounds %struct.cam_ccbq, %struct.cam_ccbq* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = add nsw i32 %10, %13
  %15 = sub nsw i32 %7, %14
  store i32 %15, i32* %6, align 4
  %16 = load i32, i32* %6, align 4
  %17 = load %struct.cam_ccbq*, %struct.cam_ccbq** %4, align 8
  %18 = getelementptr inbounds %struct.cam_ccbq, %struct.cam_ccbq* %17, i32 0, i32 2
  %19 = load i32, i32* %18, align 4
  %20 = add nsw i32 %19, %16
  store i32 %20, i32* %18, align 4
  %21 = load i32, i32* %6, align 4
  %22 = load %struct.cam_ccbq*, %struct.cam_ccbq** %4, align 8
  %23 = getelementptr inbounds %struct.cam_ccbq, %struct.cam_ccbq* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = add nsw i32 %24, %21
  store i32 %25, i32* %23, align 4
  %26 = load i32, i32* %5, align 4
  %27 = load i32, i32* %5, align 4
  %28 = sdiv i32 %27, 2
  %29 = add nsw i32 %26, %28
  %30 = call i32 @fls(i32 %29)
  %31 = shl i32 1, %30
  %32 = call i32 @imax(i32 64, i32 %31)
  store i32 %32, i32* %5, align 4
  %33 = load i32, i32* %5, align 4
  %34 = load %struct.cam_ccbq*, %struct.cam_ccbq** %4, align 8
  %35 = getelementptr inbounds %struct.cam_ccbq, %struct.cam_ccbq* %34, i32 0, i32 3
  %36 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = icmp sgt i32 %33, %37
  br i1 %38, label %39, label %44

39:                                               ; preds = %2
  %40 = load %struct.cam_ccbq*, %struct.cam_ccbq** %4, align 8
  %41 = getelementptr inbounds %struct.cam_ccbq, %struct.cam_ccbq* %40, i32 0, i32 3
  %42 = load i32, i32* %5, align 4
  %43 = call i32 @camq_resize(%struct.TYPE_2__* %41, i32 %42)
  store i32 %43, i32* %3, align 4
  br label %46

44:                                               ; preds = %2
  %45 = load i32, i32* @CAM_REQ_CMP, align 4
  store i32 %45, i32* %3, align 4
  br label %46

46:                                               ; preds = %44, %39
  %47 = load i32, i32* %3, align 4
  ret i32 %47
}

declare dso_local i32 @imax(i32, i32) #1

declare dso_local i32 @fls(i32) #1

declare dso_local i32 @camq_resize(%struct.TYPE_2__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
